--- a/cppSdk/testnet/src/Makefile.am
+++ b/cppSdk/testnet/src/Makefile.am
@@ -8,13 +8,13 @@ else
     CLIENT_PROXY = -lclient_proxy
 endif
 
-testnet_SOURCES = test_violas.cpp test_libra.cpp
+testnet_SOURCES = test_violas.cpp test_libra.cpp main.cpp
 testnet_CXXFLAGS= -std=c++17 -I$(top_srcdir)/cppSdk/src
 testnet_LDFLAGS = -Wl,-rpath=./lib,-rpath=../lib,-rpath=/usr/local/lib \
                   -L$(top_builddir)/cppSdk/src/.libs $(CLIENT_PROXY_PATH)
 testnet_LDADD = -lviolas_sdk -llibra_sdk -l:libstdc++fs.a $(CLIENT_PROXY)
 
-test_jni_SOURCES = test_violas.cpp test_libra.cpp
+test_jni_SOURCES = test_violas.cpp test_libra.cpp main.cpp
 test_jni_CXXFLAGS= -std=c++17 -I$(top_srcdir)/cppSdk/src
 test_jni_LDFLAGS = -Wl,-rpath=./lib,-rpath=../lib,-rpath=/usr/local/lib \
                   -L../../src/.libs -L../../../lib $(CLIENT_PROXY_PATH)                  
