add bash build_for_windows.sh to build SDK for Windows

--- a/Java/src/jni/Makefile.am
+++ b/Java/src/jni/Makefile.am
@@ -4,7 +4,7 @@ if DEBUG
     CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/debug
     CLIENT_PROXY = -lclient_proxy
 else
-    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/release -L$(top_srcdir)/rust-client-proxy/target/aarch64-linux-android/release
+    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/release
     CLIENT_PROXY = -lclient_proxy
 endif
 
