--- a/cppSdk/src/Makefile.am
+++ b/cppSdk/src/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES = libviolas_sdk.la libjniSdk.la liblibra_sdk.la
 
 if DEBUG
-    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/debug
+    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/debug #-L$(top_srcdir)/rust-client-proxy/target/x86_64-pc-windows-gnu/release
     CLIENT_PROXY =
 else
     CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/release
