--- a/rust-client-proxy/Cargo.toml
+++ b/rust-client-proxy/Cargo.toml
@@ -26,6 +26,7 @@ serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.51"
 structopt = "0.3.14"
 ureq = { version = "0.12.1"}
+walkdir = "2.3.1"
 
 once_cell = "1.3.1"
 cpp = "0.5"
@@ -45,8 +46,10 @@ libra-metrics = { path = "../../libra/common/metrics", version = "0.1.0" }
 libra-types = { path = "../../libra/types", version = "0.1.0" }
 libra-temppath = { path = "../../libra/common/temppath/", version = "0.1.0" }
 libra-workspace-hack = { path = "../../libra/common/workspace-hack", version = "0.1.0" }
+libra-network-address = { path = "../../libra/network/network-address", version = "0.1.0" }
 stdlib = { path = "../../libra/language/stdlib", version = "0.1.0" }
 transaction-builder = { path = "../../libra/language/transaction-builder", version = "0.1.0" }
+resource-viewer = { path = "../../libra/language/resource-viewer", version = "0.1.0" }
 
 move-lang = { path = "../../libra/language/move-lang", version = "0.0.1" }
 move-core-types = { path = "../../libra/language/move-core/types"}
