update ffifor rust_cpp method

--- a/cppSdk/testnet/src/Makefile.am
+++ b/cppSdk/testnet/src/Makefile.am
@@ -1,11 +1,11 @@
-bin_PROGRAMS    = testnet test_jni transfer #test_rust_cpp
+bin_PROGRAMS    = testnet test_jni transfer test_rust_cpp
 
 if DEBUG
     CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/debug
     CLIENT_PROXY = -lclient_proxy 
 else
     CLIENT_PROXY_PATH = -L$(top_srcdir)/rust-client-proxy/target/release
-    CLIENT_PROXY =  -lclient_proxy 
+    CLIENT_PROXY =  -lclient_proxy
 endif
 
 testnet_SOURCES = test_violas.cpp test_libra.cpp test_exchange.cpp test_bank.cpp main.cpp
@@ -26,7 +26,11 @@ transfer_LDFLAGS = -Wl,-rpath=./bin,-rpath=../bin,-rpath=/usr/local/lib \
                   -L../../src/.libs $(CLIENT_PROXY_PATH) 
 transfer_LDADD = -lviolas_sdk $(CLIENT_PROXY) -lstdc++fs
 
-# test_rust_cpp_SOURCES = test_rust_cpp.cpp
-# test_rust_cpp_CXXFLAGS = -std=c++17 -I$(top_srcdir)/rust-client-proxy/src/ffi
-# test_rust_cpp_LDFLAGS = -Wl,-rpath=./lib,-rpath=../lib,-rpath=/usr/local/lib $(CLIENT_PROXY_PATH)
-# test_rust_cpp_LDADD = -llibra_sdk $(CLIENT_PROXY)
+# file cpp_closures.o compiled by rust 
+RUST_CPP_CLIENT = $(top_srcdir)/rust-client-proxy/target/debug/build/client-proxy-4e68faaf80b33c94/out/rust_cpp/cpp_closures.o
+# for release $(top_srcdir)/rust-client-proxy/target/release/build/client-proxy-f60ce46fb23ec7a6/out/rust_cpp/cpp_closures.o
+
+test_rust_cpp_SOURCES = test_rust_cpp.cpp 
+test_rust_cpp_CXXFLAGS = -std=c++17 -I$(top_srcdir)/rust-client-proxy/src/ffi
+test_rust_cpp_LDFLAGS = -Wl,-rpath=./lib,-rpath=../lib,-rpath=/usr/local/lib $(CLIENT_PROXY_PATH)
+test_rust_cpp_LDADD = $(CLIENT_PROXY) $(RUST_CPP_CLIENT)
