--- a/java/src/jni/Makefile.am
+++ b/java/src/jni/Makefile.am
@@ -11,9 +11,9 @@ endif
 
 libviolas_sdk_jni_la_SOURCES = io_violas_sdk_Client.cpp  io_violas_sdk_Token.cpp
 libviolas_sdk_jni_la_CXXFLAGS = -Wall -Werror -std=c++17 -fPIC\
-                                -I$(top_srcdir)/cppSdk/src \
+                                -I$(top_srcdir)/cpp/src \
                                 -I/usr/lib/jvm/java-11-openjdk-amd64/include \
                                 -I/usr/lib/jvm/java-11-openjdk-amd64/include/linux/
-libviolas_sdk_jni_la_LDFLAGS = -L../../../cppSdk/src/.libs $(CLIENT_PROXY_PATH)
+libviolas_sdk_jni_la_LDFLAGS = -L../../../cpp/src/.libs $(CLIENT_PROXY_PATH)
 libviolas_sdk_jni_la_LIBADD = -l:libjniSdk.a $(CLIENT_PROXY)
 
