--- a/rust/oracle-service/Cargo.toml
+++ b/rust/oracle-service/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
 bytes = "0.5"
 hyper = "0.13"
 hyper-tls = "0.4"
@@ -14,7 +15,10 @@ tokio = { version = "0.2", features = ["full"] }
 pretty_env_logger = "0.4"
 serde = "1.0"
 serde_json = "1.0"
-serde_derive = "1"
+serde_derive = "1.0"
+structopt = "0.3"
+client-proxy = { path = "../client-proxy", version = "0.1.0" }
+libra-types = { path = "../../../libra/types", version = "0.1.0" }
 
 [profile.release]
 panic = 'abort'
