--- a/rust/oracle-service/Cargo.toml
+++ b/rust/oracle-service/Cargo.toml
@@ -18,6 +18,8 @@ serde_json = "1.0"
 serde_derive = "1.0"
 structopt = "0.3"
 daemonize = "0.4"
+chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
+
 client-proxy = { path = "../client-proxy", version = "0.1.0" }
 libra-types = { path = "../../../libra/types", version = "0.1.0" }
 #libra-json-rpc = { path = "../../../libra/json-rpc", version = "0.1.0"}
