--- a/rust/client-proxy/Cargo.toml
+++ b/rust/client-proxy/Cargo.toml
@@ -25,25 +25,25 @@ reqwest = { version = "0.10.6", features = ["blocking", "json", "rustls-tls"], d
 serde = { version = "1.0.114", features = ["derive"] }
 walkdir = "2.3.1"
 
-libra-config = { path = "../../../libra/config", version = "0.1.0" }
-generate-key = { path = "../../../libra/config/generate-key", version = "0.1.0" }
-crash-handler = { path = "../../../libra/common/crash-handler", version = "0.1.0" }
-libra-crypto = { path = "../../../libra/crypto/crypto", version = "0.1.0" }
-lcs = { path = "../../../libra/common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
-libra-wallet = { path = "../../../libra/testsuite/cli/libra-wallet", version = "0.1.0" }
-libra-json-rpc-client = { path = "../../../libra/client/json-rpc", version = "0.1.0" }
-libra-logger =  { path = "../../../libra/common/logger", version = "0.1.0" }
-libra-metrics = { path = "../../../libra/common/metrics", version = "0.1.0" }
-libra-temppath = { path = "../../../libra/common/temppath/", version = "0.1.0" }
-libra-workspace-hack = { path = "../../../libra/common/workspace-hack", version = "0.1.0" }
-libra-network-address = { path = "../../../libra/network/network-address", version = "0.1.0" }
-resource-viewer = { path = "../../../libra/language/resource-viewer", version = "0.1.0" }
-compiled-stdlib = { path = "../../../libra/language/stdlib/compiled",  version = "0.1.0" }
-transaction-builder = { path = "../../../libra/language/transaction-builder", version = "0.1.0" }
-libra-types = { path = "../../../libra/types", version = "0.1.0" }
+libra-config = { path = "../../../Violas/config", version = "0.1.0" }
+generate-key = { path = "../../../Violas/config/generate-key", version = "0.1.0" }
+crash-handler = { path = "../../../Violas/common/crash-handler", version = "0.1.0" }
+libra-crypto = { path = "../../../Violas/crypto/crypto", version = "0.1.0" }
+lcs = { path = "../../../Violas/common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
+libra-wallet = { path = "../../../Violas/testsuite/cli/libra-wallet", version = "0.1.0" }
+libra-json-rpc-client = { path = "../../../Violas/client/json-rpc", version = "0.1.0" }
+libra-logger =  { path = "../../../Violas/common/logger", version = "0.1.0" }
+libra-metrics = { path = "../../../Violas/common/metrics", version = "0.1.0" }
+libra-temppath = { path = "../../../Violas/common/temppath/", version = "0.1.0" }
+libra-workspace-hack = { path = "../../../Violas/common/workspace-hack", version = "0.1.0" }
+libra-network-address = { path = "../../../Violas/network/network-address", version = "0.1.0" }
+resource-viewer = { path = "../../../Violas/language/resource-viewer", version = "0.1.0" }
+compiled-stdlib = { path = "../../../Violas/language/stdlib/compiled",  version = "0.1.0" }
+transaction-builder = { path = "../../../Violas/language/transaction-builder", version = "0.1.0" }
+libra-types = { path = "../../../Violas/types", version = "0.1.0" }
 
-#move-lang = { path = "../../../libra/language/move-lang", version = "0.0.1" }
-move-core-types = { path = "../../../libra/language/move-core/types"}
+#move-lang = { path = "../../../Violas/language/move-lang", version = "0.0.1" }
+move-core-types = { path = "../../../Violas/language/move-core/types"}
 
 [dev-dependencies]
 proptest = "0.10.0"
