--- a/cpp/src/Makefile.am
+++ b/cpp/src/Makefile.am
@@ -8,22 +8,23 @@ else
     CLIENT_PROXY = 
 endif
 
-libviolas_sdk_la_SOURCES = violas_sdk.cpp
+libviolas_sdk_la_SOURCES = violas_sdk.cpp violas_sdk2.cpp
 #libcppSdk_la_HEADERS = violas_sdk.hpp
-libviolas_sdk_la_CXXFLAGS = -Wall -Werror -std=c++17 
+libviolas_sdk_la_CXXFLAGS = -Wall -Werror -std=c++17 -I$(top_srcdir)/rust/client-proxy/src/ffi
 libviolas_sdk_la_LDFLAGS = $(CLIENT_PROXY_PATH)
 libviolas_sdk_la_LIBADD = $(CLIENT_PROXY) 
 
 liblibra_sdk_la_SOURCES = violas_sdk.cpp
 #libcppSdk_la_HEADERS = violas_sdk.hpp
-liblibra_sdk_la_CXXFLAGS = -Wall -Werror -std=c++17 -DLIB_NAME=Libra
-liblibra_sdk_la_LDFLAGS = $(CLIENT_PROXY_PATH)
+liblibra_sdk_la_CXXFLAGS = -Wall -Werror -std=c++17 -DLIB_NAME=Libra -I$(top_srcdir)/rust/client-proxy/src/ffi
+liblibra_sdk_la_LDFLAGS = $(CLIENT_PROXY_PATH) 
 liblibra_sdk_la_LIBADD = $(CLIENT_PROXY)
 
 libjniSdk_la_SOURCES = violas_sdk.cpp jni_violas_sdk.cpp
 libjniSdk_la_CXXFLAGS = -Wall -Werror -std=c++17 -fPIC\
                         -I/usr/lib/jvm/java-11-openjdk-amd64/include \
-                        -I/usr/lib/jvm/java-11-openjdk-amd64/include/linux/
+                        -I/usr/lib/jvm/java-11-openjdk-amd64/include/linux/ \
+                        -I$(top_srcdir)/rust/client-proxy/src/ffi
 libjniSdk_la_LDFLAGS = $(CLIENT_PROXY_PATH)
 libjniSdk_la_LIBADD =  $(CLIENT_PROXY)
 
