--- a/java/src/jni/Makefile.am
+++ b/java/src/jni/Makefile.am
@@ -1,11 +1,11 @@
 lib_LTLIBRARIES = libviolas_sdk_jni.la
 
 if DEBUG
-    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust/client-proxy/target/debug
-    CLIENT_PROXY = -lclient_proxy
+    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust/violas-client/target/debug
+    CLIENT_PROXY = -lviolas_client
 else
-    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust/client-proxy/target/release
-    CLIENT_PROXY = -lclient_proxy
+    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust/violas-client/target/release
+    CLIENT_PROXY = -lviolas_client
 endif
 
 
