--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,11 @@
         "valarray": "cpp",
         "variant": "cpp",
         "bit": "cpp",
-        "forward_list": "cpp"
+        "forward_list": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "ranges": "cpp",
+        "stop_token": "cpp"
     },
     "git.ignoreLimitWarning": true,
     "cmake.configureOnOpen": false,
