updated Libra to Diem

--- a/rust/violas-oracle/Cargo.toml
+++ b/rust/violas-oracle/Cargo.toml
@@ -22,7 +22,7 @@ daemonize = "0.4"
 chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
 
 violas-client = { path = "../violas-client", version = "0.1.0" }
-libra-types = { path = "../../../Violas/types", version = "0.1.0" }
+diem-types = { path = "../../../Violas/types", version = "0.1.0" }
 #libra-json-rpc = { path = "../../../Violas/json-rpc", version = "0.1.0"}
 
 [profile.release]
