--- a/rust/violas-client/Cargo.toml
+++ b/rust/violas-client/Cargo.toml
@@ -23,24 +23,26 @@ rust_decimal = "1.7.0"
 num-traits = "0.2.12"
 reqwest = { version = "0.10.6", features = ["blocking", "json", "rustls-tls"], default-features = false }
 serde = { version = "1.0.114", features = ["derive"] }
+tokio = { version = "0.2.22", features = ["full"] }
 walkdir = "2.3.1"
+bcs = "0.1.1"
 
-libra-config = { path = "../../../Violas/config", version = "0.1.0" }
+diem-config = { path = "../../../Violas/config", version = "0.1.0" }
 generate-key = { path = "../../../Violas/config/generate-key", version = "0.1.0" }
 crash-handler = { path = "../../../Violas/common/crash-handler", version = "0.1.0" }
-libra-crypto = { path = "../../../Violas/crypto/crypto", version = "0.1.0" }
-lcs = { path = "../../../Violas/common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
-libra-wallet = { path = "../../../Violas/testsuite/cli/libra-wallet", version = "0.1.0" }
-libra-json-rpc-client = { path = "../../../Violas/client/json-rpc", version = "0.1.0" }
-libra-logger =  { path = "../../../Violas/common/logger", version = "0.1.0" }
-libra-metrics = { path = "../../../Violas/common/metrics", version = "0.1.0" }
-libra-temppath = { path = "../../../Violas/common/temppath/", version = "0.1.0" }
-libra-workspace-hack = { path = "../../../Violas/common/workspace-hack", version = "0.1.0" }
-libra-network-address = { path = "../../../Violas/network/network-address", version = "0.1.0" }
+diem-crypto = { path = "../../../Violas/crypto/crypto", version = "0.1.0" }
+diem-wallet = { path = "../../../Violas/testsuite/cli/diem-wallet", version = "0.1.0" }
+diem-json-rpc-client = { path = "../../../Violas/client/json-rpc", version = "0.1.0" }
+diem-infallible = { path = "../../../Violas/common/infallible", version = "0.1.0" }
+diem-logger =  { path = "../../../Violas/common/logger", version = "0.1.0" }
+diem-metrics = { path = "../../../Violas/common/metrics", version = "0.1.0" }
+diem-temppath = { path = "../../../Violas/common/temppath/", version = "0.1.0" }
+diem-workspace-hack = { path = "../../../Violas/common/workspace-hack", version = "0.1.0" }
+diem-network-address = { path = "../../../Violas/network/network-address", version = "0.1.0" }
 resource-viewer = { path = "../../../Violas/language/tools/resource-viewer", version = "0.1.0" }
 compiled-stdlib = { path = "../../../Violas/language/stdlib/compiled",  version = "0.1.0" }
 transaction-builder = { path = "../../../Violas/language/transaction-builder", version = "0.1.0" }
-libra-types = { path = "../../../Violas/types", version = "0.1.0" }
+diem-types = { path = "../../../Violas/types", version = "0.1.0" }
 
 #move-lang = { path = "../../../Violas/language/move-lang", version = "0.0.1" }
 move-core-types = { path = "../../../Violas/language/move-core/types"}
@@ -50,7 +52,7 @@ proptest = "0.10.0"
 
 [features]
 default = []
-fuzzing = ["proptest", "libra-crypto/fuzzing", "libra-types/fuzzing"]
+fuzzing = ["proptest", "diem-crypto/fuzzing", "diem-types/fuzzing"]
 
 [build-dependencies]
 cpp_build = "0.5.5"
