--- a/java/src/jni/Makefile.am
+++ b/java/src/jni/Makefile.am
@@ -1,19 +1,19 @@
-lib_LTLIBRARIES = libviolas_sdk_jni.la
+# lib_LTLIBRARIES = libviolas_sdk_jni.la
 
-if DEBUG
-    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust/violas-client/target/debug
-    CLIENT_PROXY = -lviolas_client
-else
-    CLIENT_PROXY_PATH = -L$(top_srcdir)/rust/violas-client/target/release
-    CLIENT_PROXY = -lviolas_client
-endif
+# if DEBUG
+#     CLIENT_PROXY_PATH = -L$(top_srcdir)/rust/violas-client/target/debug
+#     CLIENT_PROXY = -lviolas_client
+# else
+#     CLIENT_PROXY_PATH = -L$(top_srcdir)/rust/violas-client/target/release
+#     CLIENT_PROXY = -lviolas_client
+# endif
 
 
-libviolas_sdk_jni_la_SOURCES = io_violas_sdk_Client.cpp  io_violas_sdk_Token.cpp
-libviolas_sdk_jni_la_CXXFLAGS = -Wall -Werror -std=c++17 -fPIC\
-                                -I$(top_srcdir)/cpp/src \
-                                -I/usr/lib/jvm/java-11-openjdk-amd64/include \
-                                -I/usr/lib/jvm/java-11-openjdk-amd64/include/linux/
-libviolas_sdk_jni_la_LDFLAGS = -L../../../cpp/src/.libs $(CLIENT_PROXY_PATH)
-libviolas_sdk_jni_la_LIBADD = -l:libjniSdk.a $(CLIENT_PROXY)
+# libviolas_sdk_jni_la_SOURCES = io_violas_sdk_Client.cpp  io_violas_sdk_Token.cpp
+# libviolas_sdk_jni_la_CXXFLAGS = -Wall -Werror -std=c++17 -fPIC\
+#                                 -I$(top_srcdir)/cpp/src \
+#                                 -I/usr/lib/jvm/java-11-openjdk-amd64/include \
+#                                 -I/usr/lib/jvm/java-11-openjdk-amd64/include/linux/
+# libviolas_sdk_jni_la_LDFLAGS = -L../../../cpp/src/.libs $(CLIENT_PROXY_PATH)
+# libviolas_sdk_jni_la_LIBADD = -l:libjniSdk.a $(CLIENT_PROXY)
 
